--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       odit deleniti totam tempore quis veritatis animi dolorum culpa nesciunt unde.</p>
     <img src="./images//pattern-divider-desktop.svg" alt="">
     <button id="btn" onclick="getQuote()"><img src="./images//icon-dice.svg" alt=""></button>
+
+    <div class="timer">
+      
+    </div>
   </div>
 
  
